add initial button in setupmode

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -118,6 +118,19 @@
      <string>v</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="restart">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>190</y>
+      <width>111</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>initial board</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
